# lupex-analog-delay

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
source/dsp/: BBDFilter.cpp  BBDFilter.h  DelayLine.cpp  DelayLine.h  LupexEngine.cpp  LupexEngine.h  PingPongRouter.cpp  PingPongRouter.h  TapeEmulator.cpp  TapeEmulator.h  WowFlutter.cpp  WowFlutter.h
source/parameters/: LupexParameters.cpp  LupexParameters.h  ParameterIDs.h
source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ui/: DelayDisplay.cpp  DelayDisplay.h  LupexKnob.cpp  LupexKnob.h  LupexToggle.cpp  LupexToggle.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h  TapTempoButton.cpp  TapTempoButton.h
tests/: DelayLineTest.cpp  ParametersTest.cpp
